# life

./: .env.example  .gitignore  .gitlab-ci.yml  .replit  DEPLOYMENT_GUIDE.md  Readme.md  TODO.md  package-lock.json  package.json  pyproject.toml  replit.md  test_firebase.py
attached_assets/: Pasted-Build-the-complete-LifeScore-backend-database-auth-with-a-minimal-frontend-Project-Goal-Bu-1763740966621_1763740966622.txt
backend/: requirements.txt  supabase.sql
backend/app/: main.py
backend/app/config/: settings.py
backend/app/core/: database.py  firebase.py  logging.py  security.py
backend/app/repositories/: certificate_repository.py  cognitive_repository.py  endorsement_repository.py  lifescore_repository.py  portfolio_repository.py  user_repository.py
backend/app/routes/: admin.py  auth.py  certificate.py  cognitive.py  endorsement.py  lifescore.py  portfolio.py  profile.py
backend/app/schemas/: __init__.py  auth.py  certificate.py  cognitive.py  endorsement.py  lifescore.py  portfolio.py  user.py
backend/app/services/: certificate_service.py  cognitive_service.py  endorsement_service.py  lifescore_service.py  portfolio_service.py
frontend/: .env.example  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/admin/: page.tsx
frontend/app/certificate/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/endorsement/: page.tsx
frontend/app/help/: page.tsx
frontend/app/leaderboard/: page.tsx
frontend/app/lifescore/: page.tsx
frontend/components/: Footer.tsx  Nav.tsx
(+13 files in other folders)
